Introducing scopeGuard to add a bit more safety to our render methods.

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -204,6 +204,7 @@
     <ClInclude Include="Source\Utility\generalUtility.h" />
     <ClInclude Include="Source\Utility\notification.h" />
     <ClInclude Include="Source\Utility\package.h" />
+    <ClInclude Include="Source\Utility\scopeGuard.hpp" />
     <ClInclude Include="Source\Utility\signal.h" />
     <ClInclude Include="Source\Utility\stopwatch.h" />
   </ItemGroup>
