--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -156,5 +156,8 @@
     <ClInclude Include="Source\Render\compositeScene.h">
       <Filter>Source Files\Render</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Utility\scopeGuard.hpp">
+      <Filter>Source Files\Utility</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
